# multi-agent-sre

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  fix_models.py  fix_structured_output.py  pyproject.toml
data/audit/: audit_log.jsonl
data/policies/: immutable_rules.yaml
data/runbooks/: high_cpu.md  memory_issues.md  pod_crashloop.md
docker/: prometheus.yml
docker/grafana/provisioning/datasources/: datasources.yml
scripts/: simulate_incident.py  test_phase3.py  test_phase4.py
src/: __init__.py  cli.py  config.py  logging_config.py  main.py
src/agents/: __init__.py  base_agent.py  diagnose_agent.py  monitor_agent.py  policy_agent.py  remediate_agent.py  report_agent.py
src/api/: __init__.py  routes.py
src/governance/: __init__.py  audit_trail.py
src/hitl/: __init__.py  approval_manager.py  slack_notifier.py
src/mcp/: __init__.py  kubernetes_server.py  prometheus_server.py
src/memory/: __init__.py  incident_memory.py  mem0_client.py
src/rag/: __init__.py  document_processor.py  embeddings.py  hybrid_retriever.py  rag_pipeline.py  reranker.py  vector_store.py
src/reliability/: __init__.py  circuit_breaker.py  retry_policy.py  timeout_manager.py
src/workflows/: __init__.py  incident_workflow.py  states.py
tests/: test_agents.py
