[project]
name = "multi-agent-sre"
version = "0.1.0"
description = "Production-grade Multi-Agent SRE Platform with LangGraph, MCP, and A2A protocols"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Ashutosh Rane", email = "ashrane111@gmail.com" }
]
keywords = [
    "multi-agent",
    "sre",
    "langgraph",
    "mcp",
    "agentic-ai",
    "llm",
    "kubernetes",
    "incident-response"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ============== LLM & Agents ==============
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",  # For state persistence
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",  # Gemini fallback
    "litellm>=1.40.0",  # Unified LLM gateway
    "instructor>=1.3.0",  # Structured outputs with Pydantic
    
    # ============== Memory & RAG ==============
    "mem0ai>=0.1.0",  # Episodic memory
    "chromadb>=0.5.0",  # Vector database
    "rank-bm25>=0.2.2",  # BM25 sparse retrieval
    "sentence-transformers>=3.0.0",  # Embeddings & Cross-encoder reranker
    
    # ============== Caching ==============
    "redis>=5.0.0",
    "hiredis>=2.3.0",  # Fast Redis parser
    
    # ============== API & Web ==============
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",  # Settings management
    "sse-starlette>=2.1.0",  # Server-sent events for streaming
    "httpx>=0.27.0",
    "websockets>=12.0",
    
    # ============== Reliability ==============
    "tenacity>=8.5.0",  # Retry with backoff, circuit breaker
    "circuitbreaker>=2.0.0",  # Circuit breaker pattern
    
    # ============== Security ==============
    "presidio-analyzer>=2.2.0",  # PII detection
    "presidio-anonymizer>=2.2.0",  # PII redaction
    
    # ============== Observability ==============
    "langsmith>=0.1.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "prometheus-client>=0.20.0",
    "tiktoken>=0.7.0",  # Token counting
    
    # ============== Evaluation ==============
    "deepeval>=1.0.0",
    "ragas>=0.1.0",
    
    # ============== Utilities ==============
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "structlog>=24.4.0",  # Structured logging
    "rich>=13.7.0",  # Pretty console output
    "typer>=0.12.0",  # CLI
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",  # Fast linter
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "ipython>=8.26.0",
]

kubernetes = [
    "kubernetes>=30.1.0",  # K8s client
    "kopf>=1.37.0",  # K8s operator framework
]

[project.scripts]
sre-platform = "src.cli:app"

[project.urls]
Homepage = "https://github.com/ashrane111/multi-agent-sre"
Repository = "https://github.com/ashrane111/multi-agent-sre"
Documentation = "https://github.com/ashrane111/multi-agent-sre#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
